--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,7 +26,7 @@
     </div>
     <div class="row mt-3">
         <div class="col-md-4">
-            <a class="btn btn-info" role="button">Logout</a>
+            <a th:href="@{/logout}" class="btn btn-info" role="button">Logout</a>
         </div>
     </div>
 </div>
